kuberentes/kubernetes-documents/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.wsi.local"
    http:
      paths:
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
